<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registrar_mesa"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:text="Ingresa el número y la capacidad máxima"
        android:textColor="@color/text_secondary"
        android:textSize="13sp" />

    <!-- Campo Número de Mesa -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNumeroMesa"
        style="@style/Widget.SaborApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_numero_mesa"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNumeroMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/text_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo Capacidad -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCapacidadMesa"
        style="@style/Widget.SaborApp.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/hint_capacidad_mesa"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCapacidadMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/text_primary" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

